# apis-as-mcp-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: code-reviewer.md  security-reviewer.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/run-tests/: SKILL.md
backend/: .env.example  Dockerfile  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
backend/api_configs/: authenticated_api_example.yaml  example_apis.yaml
backend/app/: agent.py  config.py  main.py  storage.py
backend/app/models/: api_config.py
backend/app/routes/: __init__.py  api_configs.py  tools.py
backend/app/tools/: api_tool.py  registry.py
backend/mcp_server/: __init__.py  run.py  server.py  tool_registry.py
backend/tests/: conftest.py  test_fastapi_routes.py  test_frontend_simulation.py  test_mcp_server.py  test_select_tools.py
frontend/: .env.example  nixpacks.toml  package-lock.json  package.json  railway.toml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/backend/[...path]/: route.ts
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/api/copilotkit/[...path]/: route.ts
frontend/src/components/: ApiConfigBuilder.tsx  ApiConfigManager.tsx  ChatAgent.tsx  ConfigPanel.tsx  ToolSelector.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api-config.ts
