[project]
name = "apis-as-mcp-server"
version = "0.1.0"
description = "Turn REST APIs into chat-accessible MCP tools with CopilotKit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "copilotkit>=0.1.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
